# Alchemancer

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yml  test-base.yml  test.yml
alchemancer/: __init__.py  alchemancer_types.py  ast_handler.py  marshmallow_types.py  query_generator.py  query_transformation_handler.py  reflection_handler.py  types.py
alchemancer/sqlalchemy/: ast_handler.py  query_generator.py  reflection_handler.py
alchemancer/types/: marshmallow.py  query.py  resolver.py
examples/queries/: test_basic_resolvers.py  test_basic_subqueries.py  test_basic_subqueries_with_selects.py  test_computed_columns.py  test_exists.py  test_functions.py  test_functions_advanced.py  test_not_exists.py  test_simple_json_access.py  test_the_basics.py  test_unions_and_ctes.py  test_when_then_clauses.py  test_window_functions.py
examples/resolvers/: roles_resolver.py
fastapi/: database.py  main.py  models.py
tests/: docker-compose.yml
tests/fixtures/: conftest.py  test_dbs.py
tests/fixtures/models/: reservation.py  role.py  user.py  vehicle.py
tests/fixtures/models/generic/: reservation.py  role.py  user.py  vehicle.py
tests/fixtures/models/postgresql/: psql_base_model.py  system.py
tests/suite/: test_ast_parsing.py  test_live_queries.py  test_query_generation.py  test_query_transformer.py  test_schema_generation.py
